# CES-Internal-Tool

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  index.html  jj.json  jj.py  jj.txt  pyproject.toml  tsconfig.json  vite.config.ts
ces-ddr-platform/ces-backend/: .env.example  .gitignore  README.md  pyproject.toml  run.py
ces-ddr-platform/ces-backend-python/: .env.example  pyproject.toml  run.py
ces-ddr-platform/ces-backend-python/app/: config.py  main.py
ces-ddr-platform/ces-backend-python/app/api/: auth.py
ces-ddr-platform/ces-backend-python/app/auth/: jwt.py  middleware.py
ces-ddr-platform/ces-backend-python/app/models/: user.py
ces-ddr-platform/ces-backend-python/tests/: conftest.py  test_alembic_schema.py
ces-ddr-platform/ces-backend-python/tests/api/: test_auth.py
ces-ddr-platform/ces-backend/alembic/: env.py
ces-ddr-platform/ces-backend/alembic/versions/: 002_datetime_epoch.py
ces-ddr-platform/ces-backend/app/: config.py  exceptions.py  main.py  migration_config.py
ces-ddr-platform/ces-backend/app/api/: health.py
ces-ddr-platform/ces-backend/app/auth/: jwt.py  middleware.py  password.py
ces-ddr-platform/ces-backend/app/db/: pool.py
ces-ddr-platform/ces-backend/app/models/: user.py
ces-ddr-platform/ces-backend/src/: main.py
ces-ddr-platform/ces-backend/src/api/: endpoints.py
ces-ddr-platform/ces-backend/src/config/: events.py
ces-ddr-platform/ces-backend/src/constants/: cost.py  occurrence.py  pipeline.py  processing.py  prompts.py  search.py  storage.py  time.py
ces-ddr-platform/ces-backend/src/repository/: database.py  events.py
ces-ddr-platform/ces-backend/src/resources/: __init__.py  ddr_schema.json  ddr_schema.py  keywords.json
ces-ddr-platform/ces-backend/src/services/: ddr.py  ddr_status.py  langsmith_tracing.py  monitor.py  pipeline_service.py  query.py  (+3 more)
ces-ddr-platform/ces-backend/tests/: test_alembic_schema.py  test_classify.py  test_classify_fixture.py  test_ddr_extraction_pipeline.py  test_ddr_processing_task.py  test_ddr_schema.py  test_ddr_status_stream.py  test_ddr_upload_contract.py  test_dedup.py  test_density_join.py  test_infer_mmd.py  test_keyword_loader.py  test_keywords_route.py  test_occurrence_generation.py  test_occurrence_schema.py  test_pipeline_cost_route.py  test_time_log_embedding.py  test_well_metadata.py
(+267 files in other folders)
