[project]
name = "ces-backend-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-decouple>=3.8,<4.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
